--- a/css/main.css
+++ b/css/main.css
@@ -372,3 +372,21 @@ header .badges .badge {
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
     font-size: 30px;
 }
+
+.notice .promotion {
+    height: 693px;
+    background-color: #f6f5df;
+    position: relative;
+}
+.notice .promotion .swiper-container {
+    width: calc(819px * 3 + 20px);
+    /* width: calc(100% - 50px); */
+    height: 553px;
+    background-color: orange;
+    text-align: center;
+    font-size: 200px;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    margin-left: calc((819px * 3 + 20px) / -2);
+}
